--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
             <ul class="nav">
                 <li><a href="/">Inicio</a></li>
                 <!-- Otros elementos de navegación -->
+                <!-- Otros elementos de navegación -->
             </ul>
         </div>
     </div>
