--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
                 <li><a href="/">Inicio</a></li>
                 <!-- Otros elementos de navegación -->
                 <!-- Otros elementos de navegación -->
+                <!-- Otros elementos de navegación -->
             </ul>
         </div>
     </div>
