--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -158,6 +158,8 @@ button:hover {
  /* Estilo para los checkboxes */
  
 .checkbox-group {
+   
+
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -219,12 +221,13 @@ button:hover {
 }
 
 .checkbox-tile {
+    width:  80px; /* Ajustar el ancho de checkbox*/
+    height: 80px; /* Ajustar la altura de checkbox*/
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	width: 7rem;
-	min-height: 7rem;
+
 	border-radius: 0.5rem;
 	border: 2px solid #b5bfd9;
 	background-color: #ffffff00;
@@ -237,8 +240,8 @@ button:hover {
 		content: "";
 		position: absolute;
 		display: block;
-		width: 1.25rem;
-		height: 1.25rem;
+		width:  1.0rem;
+		height: 1.0rem;
 		border: 2px solid #b5bfd9;
 		background-color: #fff;
 		border-radius: 50%;
@@ -272,15 +275,25 @@ button:hover {
 }
 
 .checkbox-label {
+    font-size: 15px; /* Reducir el tamaño de la fuente, si es necesario */
 	color: #f1f1f1;
 	transition: .375s ease;
 	text-align: center;
 }
 
 
+.checkbox-icon, .checkbox-icon img {
+    width:  35px; /* Nuevo ancho más pequeño */
+    height: 35px; /* Nueva altura más pequeña */
+}
+
+
+
+
+
 .small-icon {
-    width: 54px; /* Ancho deseado para el icono */
-    height: 54px; /* Altura deseada para el icono */
+    width: 54px; /* Ancho deseado para el icono de resorte */
+    height: 54px; /* Altura deseada para el icono de resorte */
 }
 
 
