--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -360,3 +360,63 @@ button:hover {
 
 
 
+ /* cards de resortes */
+ 
+/* Contenedor de Tarjetas */
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 15px; /* Espacio reducido entre tarjetas */
+}
+
+/* Estilo de Tarjetas */
+.card {
+    width: 250px; /* Ancho de tarjeta reducido */
+    background-color: #1c1c1e; /* Fondo de tarjeta oscuro */
+    border: 2px solid #fff; /* Borde blanco */
+    border-radius: 15px;
+    overflow: hidden;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2); /* Sombra ajustada para menor elevación */
+}
+
+.card-content {
+    padding: 15px; /* Padding reducido */
+}
+
+.card-header {
+    font-size: 12px; /* Mantén el tamaño de fuente si ya estaba definido */
+    font-weight: bold;
+    color: #0a84ff; /* o el color que prefieras */
+    margin-top: 1px; /* Reducir el margen superior según necesites */
+    padding-top: 1px; /* Ajustar el padding superior si es necesario */
+    border-bottom: 1px solid #2c2c2e00; /* Opcional: añadir un borde para separar el encabezado del contenido */
+}
+
+
+.card-body p {
+    color: #a2a2a5; /* Texto más claro para contraste */
+    margin: 8px 0; /* Margen ajustado */
+    font-size: 14px; /* Tamaño de fuente reducido para el cuerpo */
+    line-height: 1.4; /* Espaciado de línea ajustado */
+}
+
+/* Ajustes adicionales para botones y enlaces */
+a, button {
+    font-size: 14px; /* Tamaño de fuente reducido para enlaces y botones */
+}
+
+button {
+    padding: 8px 16px; /* Padding ajustado para botones */
+    border-radius: 8px; /* Bordes más redondeados */
+}
+
+button:hover {
+    background-color: #007aff;
+}
